Add some links to WebLN sites

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,15 @@
 
 
     <hr>
-
+      <p>Other WebLN sites:</p>
+      <ul>
+        <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
+        <li><a href="https://yalls.org/">Yalls mainnet</a></li>
+        <li><a href="https://kriptode.com/satoshisworld">Satoshis World</a></li>
+        <li><a href="https://kriptode.com/lnhunt/index.html">LN Hunt (same host as Satoshis World)</a></li>
+        <li><a href="https://lightning-roulette.com/">Lightning Roulette (go to the menue and "Deposit using webLN")</a></li>
+      </ul>
+    <hr>
     <pre><code>
 WebLN.requestProvider().then(function(webln) {
   webln.getInfo().then(function(info) {
