--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,11 @@
 
 
     <hr>
+      <p>LNURL-PAY</p>
+      <a href="lightning:lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x">
+        lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x
+      </a>
+    <hr>
       <p>Other WebLN sites:</p>
       <ul>
         <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
