Add valid lnurl

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,9 +23,14 @@
 
 
     <hr>
-      <p>LNURL-PAY</p>
+      <p>LNURL-PAY ERROR (max usages exeeded)</p>
       <a href="lightning:lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x">
         lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x
+      </a>
+    <hr>
+      <p>LNURL-PAY VALI D</p>
+      <a href="lightning:lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm">
+        lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm
       </a>
     <hr>
       <p>Other WebLN sites:</p>
