--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,11 @@
   <body>
 
 
+    <p>
+      User: <code><%= JSON.stringify(user) %></code>
+      <a href="/login">Login</a>
+    </p>
+    <hr>
     <pre><a href="lightning:<%= invoice.payment_request %>">lnbtc...</a></pre>
     <textarea>
       <%= invoice.payment_request %>
@@ -29,8 +34,8 @@
       </a>
     <hr>
       <p>LNURL-PAY VALID</p>
-      <a href="lightning:lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0tpxanryenyxyenwvr9xcurgvfcxd3xvdtr8yekven9vg6r2wryvvergve5vgunswtrxuenvc3kv43xgcehxumkgve5vvcnxepjvcmxv03dmle">
-        lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0tpxanryenyxyenwvr9xcurgvfcxd3xvdtr8yekven9vg6r2wryvvergve5vgunswtrxuenvc3kv43xgcehxumkgve5vvcnxepjvcmxv03dmle
+      <a href="lightning:lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm">
+        lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm
       </a>
     <hr>
       <p>Other WebLN sites:</p>
