Ignore integrity check

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,11 +64,7 @@ WebLN.requestProvider().then(function(webln) {
       <%= JSON.stringify(headers) %>
     </div>
 
-    <script
-      src="https://unpkg.com/webln@0.2.2/dist/webln.min.js"
-      integrity="sha384-mTReBqbhPO7ljQeIoFaD1NYS2KiYMwFJhUNpdwLj+VIuhhjvHQlZ1XpwzAvd93nQ"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://unpkg.com/webln@0.2.2/dist/webln.min.js"></script>
     <script>
 
     function enable() {
