Disable lnurl-auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,6 @@
   <body>
 
 
-    <p>
-      User: <code><%= JSON.stringify(user) %></code>
-      <a href="/login">Login</a>
-    </p>
-    <hr>
     <pre><a href="lightning:<%= invoice.payment_request %>">lnbtc...</a></pre>
     <textarea>
       <%= invoice.payment_request %>
@@ -28,7 +23,7 @@
 
 
     <hr>
-      <p>LNURL-PAY ERROR (max usages exeeded)</p>
+      <p>LNURL-PAY ERROR (max usages exceeded)</p>
       <a href="lightning:lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x">
         lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x
       </a>
