--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,107 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>402</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-  </head>
-  <body>
 
+<head>
+  <title>402</title>
+  <meta charset="utf-8" />
+  <link href="/css/style.css" rel="stylesheet">
+</head>
 
-    <pre><a href="lightning:<%= invoice.payment_request %>">lnbtc...</a></pre>
-    <textarea>
-      <%= invoice.payment_request %>
-    </textarea>
+<body>
+  <!-- Nav Bar-->
+  <div class="nav">
+    <img class="logo" src="/images/albyhead.png"></img>
+    <h1>Alby Testing Playground</h1>
+    <button class="connect">Connect</button>
+  </div>
+  <!-- Main Playground-->
 
-    <button onclick="enable();">Enable</button>
-    <div id="getinfo"></div>
-    <hr>
-
-    <button onclick="pay();">Pay</button>
-
-    <div id="content"></div>
-
-
-    <hr>
-      <p>LNURL-PAY ERROR (max usages exceeded)</p>
-      <a href="lightning:lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x">
-        lnurl1dp68gup69uhkcmmrv9kxsmmnwsarzdf4xv6j7mrww4exc0m3856rgv3cxyerzvphv93rjwrpxu6r2vfnvvmrjce58qengv3cxyukxd3h8qmxxwfexfnrxvpkv33rxd3nxajnwe3sxymkxetyvsckzv3n25p26x
-      </a>
-    <hr>
-      <p>LNURL-PAY VALID</p>
-      <a href="lightning:lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm">
-        lnurl1dp68gup69uhkzmrfvdjj6mrww4exctngv4ex76m4v9c8qtnrdakn5wps9akxuatjdslhz0t98y6rwwpjvc6nxcekxdjr2etz8psnvceevvunswfe8ymkxdt98ycnswp3xfjnjepsxsurjcf38pjxzvtpvserwcf4xuckze3cxejrjr4r6gm
-      </a>
-    <hr>
-      <p>Other WebLN sites:</p>
-      <ul>
-        <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
-        <li><a href="https://yalls.org/">Yalls mainnet</a></li>
-        <li><a href="https://kriptode.com/satoshisworld">Satoshis World</a></li>
-        <li><a href="https://kriptode.com/lnhunt/index.html">LN Hunt (same host as Satoshis World)</a></li>
-        <li><a href="https://lightning-roulette.com/">Lightning Roulette (go to the menue and "Deposit using webLN")</a></li>
-      </ul>
-    <hr>
-    <pre><code>
+  <div class="playground">
+    <div class="interaction">
+      <div class="container">
+        <textarea>
+            <%= invoice.payment_request %>
+          </textarea>
+        <div class="buttons">
+          <button onclick="enable();">Connect</button>
+          <button onclick="pay();">Pay</button>
+        </div>
+      </div>
+    </div>
+    
+    <div class="console">
+      <div class="display">
+        <div id="getinfo"></div>
+        <div id="content"></div>
+      </div>
+      
+    </div>
+  </div>
+  <hr>
+  <pre><code>
 WebLN.requestProvider().then(function(webln) {
-  webln.getInfo().then(function(info) {
-    console.log(info);
-  });
-
-  webln.sendPayment('<%= invoice.payment_request %>');
+webln.getInfo().then(function(info) {
+console.log(info);
 });
 
-    </code></pre>
+webln.sendPayment('<%= invoice.payment_request %>');
+});
 
-    <hr>
-    <div id="headers">
-      <h5>Request headers:</h3>
-      <%= JSON.stringify(headers) %>
-    </div>
+  </code></pre>
+  <hr>
+  <h3>Other WebLN sites:</h3>
+  <ul>
+    <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
+    <li><a href="https://yalls.org/">Yalls mainnet</a></li>
+    <li><a href="https://kriptode.com/satoshisworld">Satoshis World</a></li>
+    <li><a href="https://kriptode.com/lnhunt/index.html">LN Hunt (same host as Satoshis World)</a></li>
+    <li><a href="https://lightning-roulette.com/">Lightning Roulette (go to the menue and "Deposit using webLN")</a>
+    </li>
+  </ul>
 
-    <script src="https://unpkg.com/webln@0.2.2/dist/webln.min.js"></script>
-    <script>
-      function enable() {
-        WebLN.requestProvider().then(function(webln) {
-          webln.getInfo().then(function(info) {
-            document.getElementById('getinfo').innerHTML = JSON.stringify(info);
-          });
-        })
-        .catch(function(e) {
+  <script src="https://unpkg.com/webln@0.2.2/dist/webln.min.js"></script>
+  <script>
+    function enable() {
+      WebLN.requestProvider().then(function (webln) {
+        webln.getInfo().then(function (info) {
+          document.getElementById('getinfo').innerHTML = JSON.stringify(info);
+        });
+      })
+        .catch(function (e) {
           alert("Failed: " + e.message);
           console.log('error enable:', e);
         });
-      }
-      function pay() {
-        WebLN.requestProvider()
-          .then(function(webln) {
-            return webln.sendPayment('<%= invoice.payment_request %>')
-              .then(function(r) {
-                document.getElementById('content').innerHTML = "YAY, thanks!";
-                console.log('done', r);
-              })
-              .catch(function(e) {
-                alert("Failed: " + e.message);
-                console.log('err pay:', e);
-              });
+    }
+    function pay() {
+      WebLN.requestProvider()
+        .then(function (webln) {
+          return webln.sendPayment('<%= invoice.payment_request %>')
+            .then(function (r) {
+              document.getElementById('content').innerHTML = "YAY, thanks!";
+              console.log('done', r);
+            })
+            .catch(function (e) {
+              alert("Failed: " + e.message);
+              console.log('err pay:', e);
+            });
         })
-        .catch(function(e) {
+        .catch(function (e) {
           alert("Webln error, check console");
           console.log('err, provider', e);
         });
-      }
+    }
 
-      window.addEventListener('DOMContentLoaded', function(event) {
-        window.setTimeout(function() {
+    window.addEventListener('DOMContentLoaded', function (event) {
+      window.setTimeout(function () {
 
-          WebLN.requestProvider().then(webln => {
-            console.log('-- webln found');
-          })
-          .catch(function(e) { console.log('-- requesting webln failed', e) });
+        WebLN.requestProvider().then(webln => {
+          console.log('-- webln found');
+        })
+          .catch(function (e) { console.log('-- requesting webln failed', e) });
 
-        }, 300);
-      });
-    </script>
+      }, 300);
+    });
+  </script>
 
-  </body>
+</body>
+
 </html>
