--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,45 +19,41 @@
   <div class="playground">
     <div class="interaction">
       <div class="container">
-        <textarea>
-            <%= invoice.payment_request %>
-          </textarea>
         <div class="buttons">
           <button onclick="enable();">Connect</button>
           <button onclick="pay();">Pay</button>
         </div>
+        <pre class="codedisplay">
+          <code>
+            WebLN.requestProvider().then(function(webln) {
+              webln.getInfo().then(function(info) {
+              console.log(info);
+            });
+                
+            webln.sendPayment('<%% invoice.payment_request %>');
+          </code>
+        </pre>
+        
+      </div>
+      <div class="webln-sites">
+        <h3>Other WebLN Sites</h3>
+        <ul>
+          <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
+          <li><a href="https://yalls.org/">Yalls mainnet</a></li>
+          <li><a href="https://kriptode.com/satoshisworld">Satoshis World</a></li>
+          <li><a href="https://kriptode.com/lnhunt/index.html">LN Hunt (same host as Satoshis World)</a></li>
+          <li><a href="https://lightning-roulette.com/">Lightning Roulette (go to the menue and "Deposit using webLN")</a></li>
+        </ul>
       </div>
     </div>
-    
+
     <div class="console">
       <div class="display">
         <div id="getinfo"></div>
         <div id="content"></div>
       </div>
-      
     </div>
   </div>
-  <hr>
-  <pre><code>
-WebLN.requestProvider().then(function(webln) {
-webln.getInfo().then(function(info) {
-console.log(info);
-});
-
-webln.sendPayment('<%= invoice.payment_request %>');
-});
-
-  </code></pre>
-  <hr>
-  <h3>Other WebLN sites:</h3>
-  <ul>
-    <li><a href="https://testnet.yalls.org/">Yalls testnet</a></li>
-    <li><a href="https://yalls.org/">Yalls mainnet</a></li>
-    <li><a href="https://kriptode.com/satoshisworld">Satoshis World</a></li>
-    <li><a href="https://kriptode.com/lnhunt/index.html">LN Hunt (same host as Satoshis World)</a></li>
-    <li><a href="https://lightning-roulette.com/">Lightning Roulette (go to the menue and "Deposit using webLN")</a>
-    </li>
-  </ul>
 
   <script src="https://unpkg.com/webln@0.2.2/dist/webln.min.js"></script>
   <script>
