--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 
-body{
+body {
     width: 100%;
     height: 90vh;
     position: relative;
@@ -12,7 +12,7 @@ body{
 
 /* Nav bar */
 
-.nav{
+.nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,11 +29,11 @@ body{
     color: white;
 }
 
-.nav > img{
+.nav>img {
     height: 100%;
 }
 
-.connect{
+.connect {
     background-color: orange;
     color: white;
     font-size: 16px;
@@ -45,19 +45,19 @@ body{
 }
 
 
-.connect:hover{
+.connect:hover {
     background-color: rgb(255, 182, 47);
     cursor: pointer;
 }
 
 /* Playground */
-.playground{
+.playground {
     display: flex;
     margin-top: 10vh;
     height: 100%;
 }
 
-.interaction{
+.interaction {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,7 +80,7 @@ body{
     padding: 10px 25px 10px 25px;
 }
 
-.webln-sites > h3{
+.webln-sites>h3 {
     text-align: center;
 }
 
@@ -88,7 +88,7 @@ textarea {
     height: 40vh;
 }
 
-.buttons{
+.buttons {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
@@ -104,22 +104,27 @@ textarea {
     border-radius: 5px;
 }
 
-.createinvoice{
-    height: 50px;
-    width: 50%;
-    background-color: grey;
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 5px;
-}
-
 .pay:hover {
     background-color: rgb(255, 182, 47);
     cursor: pointer;
 }
 
-.codedisplay{
+#createinvoice {
+    height: 50px;
+    width: 50%;
+    background-color: orange;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+#createinvoice:hover {
+    background-color: rgb(255, 182, 47);
+    cursor: pointer;
+}
+
+.codedisplay {
     display: flex;
     justify-content: start;
     border: solid;
@@ -127,12 +132,12 @@ textarea {
     padding: 10px
 }
 
-.codedisplay > code{
+.codedisplay>code {
     display: flex;
     margin-left: -90px;
 }
 
-.console{
+.console {
     display: flex;
     width: 50%;
     border-left: solid;
@@ -140,11 +145,11 @@ textarea {
     padding: 25px
 }
 
-.display > ul {
+.display>ul {
     list-style-type: none;
 }
 
-.display > ul > li {
+.display>ul>li {
     border-bottom: solid;
     border-bottom-width: thin;
     border-color: grey;
@@ -152,10 +157,139 @@ textarea {
     margin-top: 20px;
 }
 
-.display{
+.display {
     width: 100%;
     padding: 0 20px 20px 20px;
     border-radius: 10px;
     background-color: rgba(192, 225, 238, 0.425);
     overflow: scroll;
+}
+
+/* Payment Modal */
+
+#payment-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.payment-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+
+.payment-modal-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.payment-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: -10px;
+}
+
+.payment-close:hover,
+.payment-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Invoice Modal */
+
+#invoice-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.invoice-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+
+.invoice-modal-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.amount{
+    display: flex;
+    flex-direction: column;
+}
+
+.amount > label {
+    margin-bottom: 5px;
+}
+
+.modal-input {
+    height: 30px;
+    padding-left: 5px;
+    margin-bottom: 25px;
+    width: 50%;
+}
+
+.submit-input {
+    height: 40px;
+    width: 15%;
+    background-color: orange;
+    color: white;
+    border-radius: 5px;
+}
+
+.submit-input:hover {
+    cursor: pointer;
+    background-color: rgb(255, 182, 47);
+}
+
+/* Chrome, Safari, Edge, Opera */
+.modal-input::-webkit-outer-spin-button,
+.modal-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+.modal-input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.invoice-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: -10px;
+}
+
+.invoice-close:hover,
+.invoice-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
