--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,10 +139,27 @@ textarea {
 
 .console {
     display: flex;
+    flex-direction: column;
     width: 50%;
     border-left: solid;
     border-width: thin;
     padding: 25px
+}
+
+#clear-console{
+    height: 50px;
+    margin-top: 10px;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    border: solid;
+    border-width: thin;
+    border-radius: 5px;
+}
+
+#clear-console:hover{
+    cursor: pointer;
+    background-color: rgb(255, 182, 47);
 }
 
 .display>ul {
@@ -159,6 +176,7 @@ textarea {
 
 .display {
     width: 100%;
+    height: 80vh;
     padding: 0 20px 20px 20px;
     border-radius: 10px;
     background-color: rgba(192, 225, 238, 0.425);
@@ -200,6 +218,34 @@ textarea {
     font-size: 28px;
     font-weight: bold;
     margin-top: -10px;
+}
+
+.invoice-list {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+}
+
+.invoice-list-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    border: solid;
+    border-width: thin;
+    border-radius: 5px;
+    border-color: black;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-bottom: 10px;
+    color: white;
+    font-weight: bold;
+    background-color: orange;
+}
+
+.invoice-list-item:hover{
+    cursor: pointer;
+    background-color: rgb(255, 182, 47);
 }
 
 .payment-close:hover,
